[package]
name = "async-borrow"
version = "0.2.1"
edition = "2021"
license = "MIT"
description = "Async compatible ownership semantics using futures instead of lifetimes."
repository = "https://github.com/Vi-Kitten/async-borrow"
readme = "README.md"
keywords = ["async", "borrow"]
categories = ["asynchronous"]
rust-version = "1.65.0" # as calculated by `cargo msrv find`

[lib]
experimental = true

[dependencies]
futures = "0.3.31"

[dev-dependencies]
tokio = { features=["rt", "macros", "time"], version="1.43.0" }
tokio-macros = "1.*"